--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 body {
   background : linear-gradient(90deg, #3742fa,#70a1ff);
-  color: white;
+  color: white; 
+}
+
+nav {
+  background-color: balck;
+  width : 100%;
+  margin : 0;
+  height : 75px;
+}
 
 h1 {
   color : green;
