--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background : linear-gradient(90deg, #3742fa,#70a1ff);
+  background-color : #353b48;
   color: white; 
   padding : 0;
   margin : 0;
